--- a/KBIZgo.css
+++ b/KBIZgo.css
@@ -32,3 +32,10 @@
   font-weight: 900;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'KBIZgo';
+  src: url('https://cdn.jsdelivr.net/gh/illeven/braves@main/KBIZgo_Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
